some refactoring for requesting a vacation - the vacation request now self validates and therefor needs the list of holidays in the constructor.